<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_inp_smu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_inp_smu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_inp_smu"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_ship_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_inp_smu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_ship_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_ship_name"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_ship_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_ship_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_ship_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:inputType="textMultiLine"
                android:hint="@string/str_ship_address"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_consignee_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_ship_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_consignee_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/str_cons_name"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_consignee_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_consignee_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_consignee_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_cons_address"
                android:inputType="textMultiLine"
                android:lines="3"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sp_destination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_consignee_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:spinnerMode="dialog"
            />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sp_flight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sp_destination"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:spinnerMode="dialog"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_pieces_rcp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sp_flight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_pieces_rcp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_pieces_rcp"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_gross_w"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_pieces_rcp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_gross_w"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_gross_weight"
                android:inputType="numberDecimal"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_quantity_goods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_gross_w"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_quantity_goods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_qty_goods"
                android:inputType="textMultiLine"
                android:lines="3"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_signature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_quantity_goods"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_signature"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_add_smu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_add_smu"
            app:layout_constraintTop_toBottomOf="@id/til_signature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </android.support.constraint.ConstraintLayout>

</ScrollView>